@@ -19,7 +19,6 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.api.extension.InvocationInterceptor;
@@ -87,7 +86,7 @@ public class Initiator implements InvocationInterceptor {
    private List<Journey> getSortedJourneys(Method method) {
       return Arrays.stream(method.getAnnotationsByType(Journey.class))
             .sorted(Comparator.comparing(Journey::order))
-            .collect(Collectors.toList());
+            .toList();
    }
 
    /**
@@ -100,7 +99,7 @@ public class Initiator implements InvocationInterceptor {
       String journey = preQuest.value();
       JourneyData[] journeyData = preQuest.journeyData();
 
-      PreQuestJourney preQuestJourney = ReflectionUtil.findEnumImplementationsOfInterface(
+      PreQuestJourney<?> preQuestJourney = ReflectionUtil.findEnumImplementationsOfInterface(
             PreQuestJourney.class, journey, getFrameworkConfig().projectPackage());
 
       Object[] processedData = Arrays.stream(journeyData)
@@ -111,7 +110,7 @@ public class Initiator implements InvocationInterceptor {
             + ": " + preQuestJourney.toString());
       String attachmentName = journey + "-Data";
 
-      String formattedData = new ObjectFormatter().formatProcessedData(journeyData, processedData);
+      String formattedData = ObjectFormatter.formatProcessedData(journeyData, processedData);
       Allure.addAttachment(attachmentName, formattedData);
 
       preQuestJourney.journey().accept(superQuest, processedData);
@@ -126,7 +125,7 @@ public class Initiator implements InvocationInterceptor {
     * @return The resolved test data object.
     */
    private Object processJourneyData(JourneyData journeyData, SuperQuest quest) {
-      DataForge dataForge = ReflectionUtil.findEnumImplementationsOfInterface(
+      DataForge<?> dataForge = ReflectionUtil.findEnumImplementationsOfInterface(
             DataForge.class, journeyData.value(), getFrameworkConfig().projectPackage());
 
       Object argument;
