@@ -1,7 +1,6 @@
 package com.theairebellion.zeus.ui.selenium.enums;
 
 import com.theairebellion.zeus.ui.selenium.smart.SmartWebElement;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
@@ -41,14 +40,14 @@ public enum WebElementAction {
       public Object performActionWebElement(WebDriver driver, WebElement element, Object... args) {
          return element.findElements((By) args[0]).stream()
                .map(e -> new SmartWebElement(e, driver))
-               .collect(Collectors.toList());
+               .toList();
       }
 
       @Override
       public Object performActionWebDriver(WebDriver driver, Object... args) {
          return driver.findElements((By) args[0]).stream()
                .map(e -> new SmartWebElement(e, driver))
-               .collect(Collectors.toList());
+               .toList();
       }
    },
 
